# 25_web_hw-12

25_web_hw-12/: alembic.ini  main.py  pyproject.toml
25_web_hw-12/migrations/: env.py
25_web_hw-12/migrations/versions/: 145c35e5afe4_init.py  88080dbcd2af_add_table_user.py
25_web_hw-12/src/conf/: config.py
25_web_hw-12/src/database/: db.py  models.py
25_web_hw-12/src/repository/: contacts.py  users.py
25_web_hw-12/src/routes/: auth.py  contacts.py
25_web_hw-12/src/schemas/: contact.py  user.py
25_web_hw-12/src/services/: auth.py
